# yate

./: .cvsignore  .gitignore  COPYING  ChangeLog  Doxyfile  Makefile.in  README  autogen.sh  configure.ac  configure.in  kdoc-filter.sh  main.cpp  run.in  yate-config.8  yate-config.in  yate-config.sh  yate.8  yate.init  yate.logrotate  yate.pc.in  yate.spec.in  yatecbase.h  yateclass.h  yateiss.inc.in  yatemath.h  yatemime.h  yatengine.h  yatephone.h  yateversn.h.in  yatexml.h
.pc/: applied-patches
clients/: .cvsignore  Makefile.in  main-gtk.cpp  main-gtk2.cpp  main-qt.cpp  main-qt4.cpp  run-gtk  run-gtk2  run-qt  run-qt4  yate-gtk2.desktop  yate-gtk2.menu  yate-qt4.desktop  yate-qt4.menu
clients/gtk2/: Makefile.in  gtk2client.cpp  gtk2client.h
clients/qt4/: .cvsignore  Makefile.in  qt4client.cpp  qt4client.h
conf.d/: .cvsignore  Makefile.in  accfile.conf.sample  amrnbcodec.conf.sample  analog.conf.sample  cache.conf.sample  callcounters.conf.sample  callfork.conf.sample  camel_map.conf.sample  ccongestion.conf.sample  cdrbuild.conf.sample  cdrfile.conf.sample  ciscosm.conf.sample  clustering.conf.sample  cpuload.conf.sample  dbpbx.conf.sample  dsoundchan.conf.sample  dummyradio.conf.sample  enumroute.conf.sample  eventlogs.conf.sample  extmodule.conf.sample  fileinfo.conf.sample  filetransfer.conf.sample  gvoice.conf.sample  h323chan.conf.sample  heartbeat.conf.sample  iaxchan.conf.sample  isupmangler.conf.sample  jabberclient.conf.sample  jabberserver.conf.sample  javascript.conf.sample  jbfeatures.conf.sample  lateroute.conf.sample  lksctp.conf.sample  mgcpca.conf.sample  mgcpgw.conf.sample  moh.conf.sample  monitoring.conf.sample  mux.conf.sample  mysqldb.conf.sample  (+43 more)
contrib/gtk2/: Makefile.in  gtk2client.cpp  gtk2client.h
contrib/iax/: Makefile.in  frame.h  iax-client.h  iax.c  iax2-parser.c  iax2.h  md5.c  winpoop.h
contrib/regex/: regex.c
contrib/yiax/: Makefile.in  engine.cpp  frame.cpp  transaction.cpp  yateiax.h
contrib/yjingle/: Makefile.in  jbengine.cpp  jbstream.cpp  (+8 more)
debian/: .cvsignore  .gitignore  changelog  checkinstall.sh  control  copyright  libyate-perl.install  libyate.install  newver.pl  rules  upgrade_local.sh  yate-alsa.install  yate-dev.dirs  yate-dev.install  yate-doc.dirs  yate-doc.docs  yate-doc.install  yate-gsm.dirs  yate-gsm.install  yate-gtk2.dirs  yate-gtk2.install  yate-h323.install  yate-isdn.install  yate-mozilla.dirs  yate-mozilla.install  yate-mysql.install  yate-pgsql.dirs  yate-pgsql.install  yate-qt4.install  yate-scripts.dirs  yate-scripts.install  yate-sqlite.install  yate-telhw.install  yate-telhw.postinst  yate.default  yate.init  yate.install  yate.links  yate.logrotate  yate.postinst  (+1 more)
docs/: Doxyfile  dataflow.dia  dataflow.html  doc-filter.sh  extmodule.html  index.html  messages.html
engine/: .cvsignore  Array.cpp  Base64.cpp  Channel.cpp  Cipher.cpp  Client.cpp  ClientLogic.cpp  Compressor.cpp  Configuration.cpp  DataBlock.cpp  DataFormat.cpp  Engine.cpp  Evaluator.cpp  HashList.cpp  Hasher.cpp  Iterator.cpp  Makefile.in  Math.cpp  Message.cpp  Mime.cpp  Mutex.cpp  NamedList.cpp  ObjList.cpp  Plugin.cpp  Resolver.cpp  Socket.cpp  String.cpp  TelEngine.cpp  Thread.cpp  URI.cpp  XML.cpp  YMD5.cpp  YSHA1.cpp  YSHA256.cpp
modules/: .cvsignore  Makefile.in  accfile.cpp  alsachan.cpp  amrnbcodec.cpp  analyzer.cpp  callfork.cpp  callgen.cpp  cdrbuild.cpp  cdrcombine.cpp  cdrfile.cpp  cdrpgsql.cpp  conference.cpp  dbpbx.cpp  dsoundchan.cpp  dumbchan.cpp  efrcodec.cpp  enumroute.cpp  extmodule.cpp  faxchan.cpp  fileinfo.cpp  filetransfer.cpp  gsmcodec.cpp  gvoice.cpp  h323chan.cpp  iaxchan.cpp  ilbccodec.cpp  ilbcwebrtc.cpp  isaccodec.cpp  javascript.cpp  jinglefeatures.cpp  lazyrec.cpp  libypri.cpp  libypri.h  mktestlinks.sh  moh.cpp  msgsniff.cpp  mux.cpp  mysqldb.cpp  openssl.cpp  (+31 more)
packing/: yate.logrotate  yate.url
patches/: README  cdrbuild_defer_incoming  cisco_fax_rtp_format_switch  client_icons_fix  configure_spandsp_location_debian  extmodule_dumparray_variable  extmodule_nonblocking_mode  extmodule_scriptname_variable  h263-1998_payload_mapping  h264_video_support  iax_minor_fixes  msgsniff_negative_filter  namedlist_tohstore  pgsql_async_notifications  q931_overlap_sending  q931_uus_support  queue_out_multi_params_disp  regexroute_without_caller_called  register_conf_unregister_expired  register_module_routing_query_name_vaule_pairs  rmanager_tcp_nodelay_fix  sdp_fmtp_copy  sdp_separate_local_remote_attrs  series  sipfeatures_presence_event_package  socket_multicast_binding  subscription_caps_update_query  subscription_handlers_prio  video_codecs_mapping  vp8_vp9_h263_codecs_fix  yate_pm_better_tcp_connection  yate_pm_connect_method  yate_pm_dumpmsg_method  yate_pm_full_response_control  yate_pm_no_colors_if_not_on_tty  yate_pm_quit_and_any_variable  ysigchan_dtmfinband_force_support  zapcard_overruns_fix
scripts/: .cvsignore  Makefile.in  Yate.pm  detector.php  dtmf1.pl  echo.sh  leavemail.php  libvoicemail.php  libyate.php  libyate.py  libyatechan.php  noise.sh  noroute.pl  overlapped.php  play.sh  playrec.php  registration.php  route.php  sipfeatures.php  test.php  test.py  test.sh  voicemail.php
share/: Makefile.in
tables/: .cvsignore  Makefile.tables
tarballs/: .cvsignore
test/: Makefile.in  randcall.cpp  test.cpp  test1.cpp
tools/: addcopy.sh  gdb-bt-all.txt  leak-check.supp  log_rotate.sh  mkpatch.sh  rmendw.sh  sctp_linux.sh  tabify.sh  untabify.sh  upcopy.sh  upfsf.sh  yatemon.sh
windows/: .cvsignore  Client.dsp  Client.vcproj  Console.dsp  Console.vcproj  Contrib.dsp  Contrib.vcproj  Extra.dsp  Extra.vcproj  Gtk2Client.dsp  Gtk2Client.vcproj  LibGtk2.dsp  LibGtk2.vcproj  LibQt4.vcproj  Libyate.dsp  Libyate.vcproj  Modules.dsp  Modules.vcproj  QT4Modules.vcproj  Qt4Client.vcproj  Service.dsp  Service.vcproj  TestSS7.dsp  TestSS7.vcproj  YATE.dsp  YATE.dsw  YATE.sln  YATE.vcproj  _accfile.dsp  _accfile.vcproj  _amrnbcodec.vcproj  _analog.vcproj  _analogdetect.vcproj  _analyzer.dsp  _analyzer.vcproj  _cache.vcproj  _callcounters.vcproj  _callfork.dsp  _callfork.vcproj  _callgen.dsp  (+157 more)
(+472 files in other folders)
